--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,13 @@ services:
       - db
     ports:
       - "8976:80"
+  adminer:
+    image: adminer
+    restart: always
+    depends_on:
+      - db
+    ports:
+      - "8020:8000"
   db:
     image: mysql:5.7
     ports:
@@ -30,4 +37,3 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: scoutsenroute
-
