--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "stan-tab-corp/staileu-accounts": "^3.0",
         "cocur/slugify": "^3.1",
         "erusev/parsedown": "^1.6",
-        "cosenary/instagram": "^2.3"
+        "cosenary/instagram": "^2.3",
+        "tuupola/slim-basic-auth": "^3.1"
     }
 }
